tests/error/types-1.moc
void main() {
    int x = 'a';
}
